# commodities-compass

./: .gitignore  2026-03-06-roadmap-12-weeks.md  2026-03-09-phase0-and-frontend-review.md  CLAUDE.md  README.md  The-North-Star.md  cto-brief.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.jobs  README.md  pyproject.toml  scraper.py  start.sh
backend/alembic/versions/: 04f9e9fb7c44_add_pl_seasonal_score_table.py  08724a5d0bce_add_is_active_to_pl_fundamental_article.py  40aad93928c4_shift_dates_to_display_date.py  5bf65ef24b63_rename_composite_score_to_conclusion_in_.py  659baf3947da_drop_unused_volatility_column_from_pl_.py  6929480a822e_merge_seasonal_and_main_heads.py  6d4eef12be0c_add_pipeline_query_indexes.py  6fc0b37d63f0_add_harmattan_days_to_pl_seasonal_score.py  7daf5377b4df_add_source_count_to_pl_fundamental_.py  8f620009140e_add_diagnostics_jsonb_to_pl_weather_.py  984453591f4a_merge_heads.py  a1b2c3d4e5f6_add_session_type_reason_to_trading_calendar.py  a7b8c9d0e1f2_add_pl_article_segment_table.py  c0a13339094a_add_compute_enabled_to_pl_algorithm_.py  d4f5a6b7c8e9_add_pl_sentiment_feature_table.py  e36e360fb184_add_mvp_schema_v1.py  e5f6a7b8c9d0_widen_sentiment_raw_score_decimal.py  feb172a31671_add_unique_constraints_article_weather.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  excel_mappings.py  sentry.py
backend/app/engine/: README.md  __init__.py  composite.py  db_writer.py  normalization.py  pipeline.py  registry.py  runner.py  sentiment_features.py  smoothing.py  types.py
backend/app/models/: __init__.py  audit.py  indicator.py  market_research.py  pipeline.py  reference.py  signal.py  test_range.py  weather_data.py
backend/app/schemas/: auth.py  dashboard.py
backend/app/services/: audio_service.py  dashboard_service.py  dashboard_transformers.py  data_import.py  weather_service.py
backend/app/utils/: contract_resolver.py  converters.py  date_utils.py  trading_calendar.py
backend/scripts/: backfill_diagnostics.py  contract_resolver.py  db.py  llm_utils.py  roll_contract.py  seed_gcp.py  seed_historical_csv.py  seed_trading_calendar.py  sync_from_gcp.py
backend/scripts/barchart_scraper/: .env.example  README.md  SETUP.md  __init__.py  _test_iv_recon.py.backup  config.py  db_writer.py  main.py  requirements.txt  run_scraper.sh  scraper.py  sheets_writer.py  (+1 more)
backend/tests/: conftest.py  factories.py  test_db_writers.py  test_health.py  test_llm_utils.py  test_models_v1.py  test_review_fixes.py  test_roll_contract.py  test_seed_gcp.py  test_seed_trading_calendar.py  test_trading_calendar.py
(+179 files in other folders)
