[tool.poetry]
name = "commodities-compass"
version = "1.0.0"
description = "Business Intelligence application for commodities trading"
authors = ["Your Name <email@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
python-multipart = "^0.0.9"

# Database
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
greenlet = ">=3.0.0"

# Data Processing
pandas = "^2.2.0"
numpy = "^1.26.4"

# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-decouple = "^3.8"

# API & Validation
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"

# Google Sheets API
google-api-python-client = "^2.118.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"

# Observability
sentry-sdk = {extras = ["fastapi", "sqlalchemy", "httpx"], version = "^2.0.0"}

# Utilities
httpx = "^0.26.0"
slowapi = "^0.1.9"
python-dateutil = "^2.8.2"
pytz = "^2024.1"
playwright = "^1.58.0"
beautifulsoup4 = "^4.14.3"
xlrd = "^2.0.1"

# LLM Providers (press review agent)
anthropic = "^0.45.0"
openai = "^1.60.0"
google-genai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
pytest-cov = "^5.0.0"
aiosqlite = "^0.20.0"
ruff = "^0.3.5"
pyright = "^1.1.350"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
dev = "app.main:main"
lint = "app.lint:main"
import = "app.services.data_import:main"
barchart-scraper = "scripts.barchart_scraper.main:main"
ice-stocks-scraper = "scripts.ice_stocks_scraper.main:main"
cftc-scraper = "scripts.cftc_scraper.main:main"
press-review = "scripts.press_review_agent.main:main"
daily-analysis = "scripts.daily_analysis.main:main"
compass-brief = "scripts.compass_brief.main:main"
meteo-agent = "scripts.meteo_agent.main:main"
seed-gcp = "scripts.seed_gcp:main"
seed-trading-calendar = "scripts.seed_trading_calendar:main"
seed-historical-csv = "scripts.seed_historical_csv:main"
compute-indicators = "app.engine.runner:main"
roll-contract = "scripts.roll_contract:main"

[tool.pyright]
include = ["app", "tests"]
exclude = ["scripts"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
